--- a/swan-lake-marketing-landing-page-2023-11-27-05-07-12-utc/documentation/index.html
+++ b/swan-lake-marketing-landing-page-2023-11-27-05-07-12-utc/documentation/index.html
@@ -72,8 +72,8 @@
 <div class="row">
 <div class="col-md-12">
 <div class="big-title text-center" id="line1">
-<h1><strong>Swan Lake</strong>  - <mark>Lead Generation</mark>  Marketing Landing Page</h1>
-<p class="lead">Swan Lake theme / template documentation version 1.1</p>
+    <h1><strong>***</strong> - <mark>Professionelle Musiklösungen</mark></h1>
+    <p class="lead">Ihr Partner für Live-Musik, Events und individuelle Musikdienstleistungen</p>
 </div><!-- end title -->
 </div><!-- end 12 -->
 </div><!-- end row -->
@@ -113,8 +113,8 @@
 </div>
 <hr>
 <div class="drop-caps">
-<p>Swan Lake is a Modern and Creative premium Onepage Lead Generation Marketing Landing Page HTML5 Template. Swan Lake is made in a beautiful style. Anyone can use it for <strong>Agency, business, business services, and etc</strong>.Theme has a universal design, it thought every detail and animation effect. Its just as easy to customize to fit your needs, replace images and texts.</p>
-<p>Swan Lake based on bootstrap 1170px grid system, HTML5 and CSS3, and it's very easy to customize each and every block of HTML and CSS file is properly commented which will help you to  customize this template as per your requirements/</p>
+    <p>Wir bieten Ihnen hochwertige Musikdienstleistungen für <strong>Events, Hochzeiten, Firmenfeiern und mehr</strong>. Unser Service ist flexibel und individuell anpassbar, um Ihre musikalischen Wünsche zu erfüllen.</p>
+    <p>Basierend auf jahrelanger Erfahrung und einem breiten Netzwerk von Musikern, bieten wir Ihnen maßgeschneiderte Lösungen, die Ihre Veranstaltung unvergesslich machen.</p>
 </div>
 </div>
 <div class="col-md-4">
@@ -414,6 +414,18 @@ Version 1.0.0 - Nay 01, 2017
 - first release
 </pre>
 </div>
+</div><!-- end row -->
+</div><!-- end container -->
+</section><!-- end section -->
+<section id="line11" class="section white">
+<div class="container">
+<div class="row">
+<div class="col-md-12 left-align">
+<h2 class="dark-text">So buchen Sie unseren Musikservice <a href="#top">#nach oben</a><hr></h2>
+<p>Kontaktieren Sie uns per E-Mail oder Telefon, um Ihre Veranstaltung zu besprechen. Wir helfen Ihnen, die perfekte musikalische Begleitung zu finden.</p>
+<a href="mailto:info@musikservice-duerrmenz.de" class="btn btn-primary">Jetzt anfragen</a>
+<a href="tel:+491234567890" class="btn btn-info">Anrufen</a>
+</div><!-- end col -->
 </div><!-- end row -->
 </div><!-- end container -->
 </section><!-- end section -->
