--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<!-- set the apple mobile web app status bar style -->
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<!-- set the description -->
-	<meta name="description" content="Swan Lake - Lead Generation Marketing Landing Page">
-	<meta name="keywords" content="agency, bootstrap, business, corporate, creative, minimal, modern, onepage, personal, portfolio,  html5, responsive">
+	<meta name="description" content="Musikservice *** - Professionelle Musikdienstleistungen für Events, Hochzeiten und mehr.">
+	<meta name="keywords" content="Musikservice, Events, Hochzeiten, Musik, Live-Bands">
 	<meta name="author" content="Swan Lake - Lead Generation Marketing Landing Page">
 	<!-- Page Title -->
-	<title>Swan Lake - Lead Generation Marketing Landing Page</title>
+	<title>Musikservice Dürrmenz - Ihr Partner für Live Musik</title>
 	<!-- include the site stylesheet -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700%7cUbuntu:400,700" rel="stylesheet">
 	<!-- include the site stylesheet -->
@@ -53,7 +53,7 @@
 						<!-- header logo -->
 						<div class="logo pull-left">
 							<a href="home.html">
-								<img src="images/logo.png" alt="swam lake" class="img-responsive">
+								<img src="images/musikservice-logo.png" alt="Musikservice ***" class="img-responsive">
 							</a>
 						</div>
 						<a href="#" class="nav-opener pull-right"><i class="fa fa-bars" aria-hidden="true"></i></a>
@@ -63,13 +63,13 @@
 						<ul class="list-inline text-right top-list">
 							<li>
 								<i class="fa fa-envelope main-color"></i>
-								<strong>Contact US :</strong>
-								<a href="mailto:Mail@Example.com">Mail@Example.com</a>
+								<strong>Kontaktieren Sie uns:</strong>
+								<a href="mailto:info@musikservice-duerrmenz.de">info@musikservice-duerrmenz.de</a>
 							</li>
 							<li>
 								<i class="fa fa-phone main-color"></i>
-								<strong>Call Us :</strong>
-								<a href="tel:+201093515252">+201093515252</a>
+								<strong>Rufen Sie uns an:</strong>
+								<a href="tel:+491234567890">+49 123 456 7890</a>
 							</li>
 						</ul>
 					</div>
@@ -98,42 +98,17 @@
 		<!-- main content wrapping section start here -->
 		<main id="main">
 			<!-- main banner section start here -->
-			<section class="bg-img-full main-banner bg-img-parallax" style="background-image: url(http://placehold.it/1920x1080);" data-scroll-index="0">
+			<section class="bg-img-full main-banner bg-img-parallax" style="background-image: url(images/musikservice-banner.jpg);" data-scroll-index="0">
 				<span class="overlay"></span>
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12 col-sm-6 col-md-7">
-							<span class="title">Creative Landing Page Template</span>
-							<h1 class="heading text-uppercase">Let’s get started with <span class="main-color">Swan Lake Template</span></h1>
+							<span class="title">Professionelle Musikdienstleistungen</span>
+							<h1 class="heading text-uppercase">Erleben Sie unvergessliche <span class="main-color">Musikmomente</span></h1>
 							<span class="divider white"></span>
 							<div class="btn-holder">
-								<a href="#" class="btn btn-default main-bg-color text-uppercase" data-scroll-nav="2">Explore More</a>
+								<a href="#" class="btn btn-default main-bg-color text-uppercase" data-scroll-nav="2">Mehr erfahren</a>
 							</div>
-							<span class="arrow" style="background-image: url(images/arrow.png);"></span>
-						</div>
-						<div class="col-xs-12 col-sm-6 col-md-5">
-							<!-- quote form start here -->
-							<section class="quote-form" style="background-image: url(images/img02.jpg);" data-scroll-index="1">
-								<h2 class="form-heading text-center text-uppercase">register now</h2>
-								<span class="form-title text-center">Take your free trial</span>
-								<form id="contactForm" data-toggle="validator">
-									<fieldset>
-										<div class="form-group">
-											<input type="text" id="name" placeholder="Your Name" class="form-control" required data-error="NEW ERROR MESSAGE">
-										</div>
-										<div class="form-group">
-											<input type="email" id="email" placeholder="Your Email" class="form-control" required data-error="NEW ERROR MESSAGE">
-										</div>
-										<div class="form-group">
-											<input type="tel" id="phone" placeholder="Phone Number" class="form-control" required data-error="NEW ERROR MESSAGE">
-										</div>
-										<div id="msgSubmit" class="form-message hidden"></div>
-										<span class="info"><i class="fa fa-info-circle main-color" aria-hidden="true"></i> We will never share your personal info</span>
-										<button class="btn btn-default main-bg-color" type="submit" id="form-submit">GET A QUOTE</button>
-									</fieldset>
-								</form>
-							</section>
-							<!-- quote form end here -->
 						</div>
 					</div>
 				</div>
@@ -145,9 +120,9 @@
 					<!-- main heading start here -->
 					<header class="main-heading row">
 						<div class="col-xs-12 col-sm-10 col-sm-push-1 col-lg-8 col-lg-push-2 text-center">
-							<h2 class="heading text-uppercase"><span class="main-color">about</span>  Swan LAke</h2>
+							<h2 class="heading text-uppercase"><span class="main-color">Über</span> Musikservice ***</h2>
 							<span class="divider center"></span>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+							<p>Wir bieten professionelle Musikdienstleistungen für Hochzeiten, Firmenfeiern, Geburtstage und andere Events. Unser Team aus erfahrenen Musikern sorgt für die perfekte musikalische Begleitung.</p>
 						</div>
 					</header>
 					<div class="row">
@@ -228,12 +203,9 @@
 									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been standard. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 								</header>
 								<ul class="list list-unstyled">
-									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Responsive Design</li>
-									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Great Support</li>
-									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Look great on any devices</li>
-									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Highest Speed</li>
-									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Fresh Design</li>
-									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Useful and Intuitive Interface</li>
+									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Live-Bands für Events</li>
+									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Gesang</li>
+									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Individuelle Musikberatung</li>
 								</ul>
 							</div>
 						</div>
@@ -352,27 +324,38 @@
 							</div>
 							<!-- price box end here -->
 						</div>
-					</div>
-				</div>
-			</section>
-			<!-- price section end here -->
-			<!-- quote section start here -->
-			<section class="bg-img-full bg-img-parallax quote-section pad-top-lg pad-bottom-lg" style="background-image: url(http://placehold.it/1920x1080);">
-				<span class="overlay"></span>
-				<div class="container">
-					<div class="row">
-						<div class="col-cs-12 col-sm-10 col-lg-8 col-sm-push-1 col-lg-push-2 text-center">
-							<span class="subtitle">Creative Unbounce Landing Page</span>
-							<h2 class="main-color text-uppercase">get a free Quote today</h2>
-							<span class="divider white center"></span>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-							<button class="btn btn-default main-bg-color text-uppercase smooth" data-scroll-nav="1">Click here</button>
+						<div class="col-xs-12 col-sm-6 col-md-4 pad-bottom-sm">
+							<!-- price box start here -->
+							<div class="price-box">
+								<header class="header">
+									<strong class="title text-uppercase">Hochzeitspaket</strong>
+									<span class="price-txt">
+										<span class="price main-color">€500</span>
+										<span class="txt"> / Event</span>
+									</span>
+									<p>Perfekte Musik für Ihren besonderen Tag</p>
+								</header>
+							</div>
+							<!-- price box end here -->
+						</div>
+						<div class="col-xs-12 col-sm-6 col-md-4 pad-bottom-sm">
+							<!-- price box start here -->
+							<div class="price-box">
+								<header class="header">
+									<strong class="title text-uppercase">Eventpaket</strong>
+									<span class="price-txt">
+										<span class="price main-color">€800</span>
+										<span class="txt"> / Event</span>
+									</span>
+									<p>Musik mit speziellen Songwünschen für Firmenfeiern</p>
+								</header>
+							</div>
+							<!-- price box end here -->
 						</div>
 					</div>
 				</div>
 			</section>
-			<!-- quote section end here -->
-		</main>
+			<!-- price section end here -->
 		<!-- main content wrapping section end here -->
 		<!-- footer of the page start here -->
 		<footer id="footer" class="dark-bg pad-top-xs pad-bottom-xs">
@@ -407,14 +390,14 @@
 				<div class="row">
 					<!-- footer bottom container -->
 					<div class="col-xs-12 col-sm-6 bottom">
-						<p>2017 © Swan Lake. All rights reserved.</p>
+						<p>2025 © Musikservice Dürrmenz. Alle Rechte vorbehalten.</p>
 					</div>
 					<!-- footer bottom container -->
 					<div class="col-xs-12 col-sm-6 bottom">
 						<ul class="list-inline text-right mt-social">
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="#"><i class="fa fa-behance"></i></a></li>
-							<li><a href="#"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="#"><i class="fa fa-youtube"></i></a></li>
 						</ul>
 					</div>
 				</div>
