--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 						<!-- about box start here -->
 						<div class="col-xs-12 col-sm-6 col-md-3 about-box pad-bottom-sm">
 							<span class="num main-color">01.</span>
-							<span class="title text-uppercase">the company</span>
+							<span class="title text-uppercase">Die Band</span>
 							<span class="divider"></span>
 							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been indust...</p>
 							<a href="#" class="more main-color text-uppercase">READ MORE...</a>
@@ -138,7 +138,7 @@
 						<!-- about box start here -->
 						<div class="col-xs-12 col-sm-6 col-md-3 about-box pad-bottom-sm">
 							<span class="num main-color">02.</span>
-							<span class="title text-uppercase">our vision</span>
+							<span class="title text-uppercase">Unser Repertoire</span>
 							<span class="divider"></span>
 							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been indust...</p>
 							<a href="#" class="more main-color text-uppercase">READ MORE...</a>
@@ -147,7 +147,7 @@
 						<!-- about box start here -->
 						<div class="col-xs-12 col-sm-6 col-md-3 about-box pad-bottom-sm">
 							<span class="num main-color">03.</span>
-							<span class="title text-uppercase">Our mission</span>
+							<span class="title text-uppercase">Unsere Mission</span>
 							<span class="divider"></span>
 							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been indust...</p>
 							<a href="#" class="more main-color text-uppercase">READ MORE...</a>
@@ -156,7 +156,7 @@
 						<!-- about box start here -->
 						<div class="col-xs-12 col-sm-6 col-md-3 about-box pad-bottom-sm">
 							<span class="num main-color">04.</span>
-							<span class="title text-uppercase">our process</span>
+							<span class="title text-uppercase">Unser System</span>
 							<span class="divider"></span>
 							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been indust...</p>
 							<a href="#" class="more main-color text-uppercase">READ MORE...</a>
@@ -198,13 +198,13 @@
 							<div class="txt-box">
 								<!-- main heading start here -->
 								<header class="main-heading">
-									<h2 class="heading text-uppercase"><span class="main-color">our Great</span>  services</h2>
+									<h2 class="heading text-uppercase"><span class="main-color">Unsere</span>  Leistungen</h2>
 									<span class="divider"></span>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been standard. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+									<p>ganz nach Ihren Wünschen!</p>
 								</header>
 								<ul class="list list-unstyled">
-									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Live-Bands für Events</li>
-									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Gesang</li>
+									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Live-Band für Events</li>
+									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>nach wunsch mit Gesang</li>
 									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Individuelle Musikberatung</li>
 								</ul>
 							</div>
@@ -215,36 +215,27 @@
 								<li>
 									<div class="over">
 										<span class="icomoon icon-document main-color"></span>
-										<span class="title text-uppercase main-color">Awesome Design</span>
+										<span class="title text-uppercase main-color">Jung & Flexibel</span>
 										<span class="divider white center"></span>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ever since the 1500s.</p>
+										<p>Wir sind da wenn Sie uns brauchen!</p>
 									</div>
 								</li>
 								<li>
 									<div class="over">
 										<span class="icomoon icon-mobile main-color"></span>
-										<span class="title text-uppercase main-color">Responsive Layout</span>
+										<span class="title text-uppercase main-color">Freundlich</span>
 										<span class="divider white center"></span>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ever since the 1500s.</p>
+										<p>Wir stehen Ihnen gerne für Rückfragen zuverfügung</p>
 									</div>
 								</li>
 								<li>
 									<div class="over">
 										<span class="icomoon icon-layers main-color"></span>
-										<span class="title text-uppercase main-color">Easy to Customize</span>
+										<span class="title text-uppercase main-color">Wünsche?</span>
 										<span class="divider white center"></span>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ever since the 1500s.</p>
+										<p>Kein Problem! Je nach Event spielen wir gerne 1 - 2 Ihrer Wunschsongs außerhalb unseres Repertoires</p>
 									</div>
 								</li>
-								<li>
-									<div class="over">
-										<span class="icomoon icon-gears main-color"></span>
-										<span class="title text-uppercase main-color">Full Support work</span>
-										<span class="divider white center"></span>
-										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ever since the 1500s.</p>
-									</div>
-								</li>
-							</ul>
 							<!-- services box end here -->
 						</div>
 					</div>
@@ -257,72 +248,12 @@
 					<!-- main heading start here -->
 					<header class="main-heading row">
 						<div class="col-xs-12 col-sm-10 col-sm-push-1 col-lg-8 col-lg-push-2 text-center">
-							<h2 class="heading text-uppercase"><span class="main-color">Great</span> Pricing Table</h2>
+							<h2 class="heading text-uppercase"><span class="main-color">Unsere</span> Preisliste</h2>
 							<span class="divider center"></span>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
 						</div>
 					</header>
 					<!-- main heading end here -->
-					<div class="row">
-						<div class="col-xs-12 col-sm-6 col-md-4 pad-bottom-sm">
-							<!-- price box start here -->
-							<div class="price-box">
-								<header class="header">
-									<strong class="title text-uppercase">Startup</strong>
-									<span class="price-txt">
-										<span class="price main-color">$125</span>
-										<span class="txt"> /    Month</span>
-									</span>
-									<p>Best package for small awesome team</p>
-								</header>
-								<div class="box">
-									<h3 class="text-uppercase">Small awesome team</h3>
-									<span class="divider"></span>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been indust...</p>
-									<a href="#popup1" class="order text-uppercase lightbox">order now...</a>
-								</div>
-							</div>
-							<!-- price box end here -->
-						</div>
-						<div class="col-xs-12 col-sm-6 col-md-4 pad-bottom-sm">
-							<!-- price box start here -->
-							<div class="price-box">
-								<header class="header">
-									<strong class="title text-uppercase">personal</strong>
-									<span class="price-txt">
-										<span class="price main-color">$225</span>
-										<span class="txt"> /    Month</span>
-									</span>
-									<p>Best package for single people</p>
-								</header>
-								<div class="box">
-									<h3 class="text-uppercase">single people User</h3>
-									<span class="divider"></span>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been indust...</p>
-									<a href="#popup1" class="order text-uppercase lightbox">order now...</a>
-								</div>
-							</div>
-							<!-- price box end here -->
-						</div>
-						<div class="col-xs-12 col-sm-6 col-md-4 pad-bottom-sm">
-							<!-- price box start here -->
-							<div class="price-box">
-								<header class="header">
-									<strong class="title text-uppercase">Business</strong>
-									<span class="price-txt">
-										<span class="price main-color">$325</span>
-										<span class="txt"> /    Month</span>
-									</span>
-									<p>Best package for big awesome team</p>
-								</header>
-								<div class="box">
-									<h3 class="text-uppercase">big awesome team</h3>
-									<span class="divider"></span>
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been indust...</p>
-									<a href="#popup1" class="order text-uppercase lightbox">order now...</a>
-								</div>
-							</div>
-							<!-- price box end here -->
+					
 						</div>
 						<div class="col-xs-12 col-sm-6 col-md-4 pad-bottom-sm">
 							<!-- price box start here -->
