--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 						<!-- footer logo -->
 						<div class="logo pull-left">
 							<a href="home.html">
-								<img src="images/logo.png" alt="swam lake" class="img-responsive">
+								<img src="images/musikservice-logo.png" alt="Musikservice Dürrmenz" class="img-responsive">
 							</a>
 						</div>
 					</div>
@@ -305,13 +305,13 @@
 						<ul class="list-inline text-right top-list">
 							<li>
 								<i class="fa fa-envelope main-color"></i>
-								<strong>Contact US :</strong>
-								<a href="mailto:Mail@Example.com">Mail@Example.com</a>
+								<strong>Kontaktieren Sie uns:</strong>
+								<a href="mailto:info@musikservice-duerrmenz.de">info@musikservice-duerrmenz.de</a>
 							</li>
 							<li>
 								<i class="fa fa-phone main-color"></i>
-								<strong>Call Us :</strong>
-								<a href="tel:+201093515252">+201093515252</a>
+								<strong>Rufen Sie uns an:</strong>
+								<a href="tel:+491234567890">+49 123 456 7890</a>
 							</li>
 						</ul>
 					</div>
