--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
 						<div class="col-xs-12">
 							<ul class="nav-list list-inline">
 								<li><a href="#" data-scroll-nav="0" class="smooth">Home</a></li>
-								<li><a href="#" data-scroll-nav="2" class="smooth">About Us</a></li>
-								<li><a href="#" data-scroll-nav="3" class="smooth">Our Services</a></li>
-								<li><a href="#" data-scroll-nav="4" class="smooth">Pricing Table</a></li>
+								<li><a href="#" data-scroll-nav="2" class="smooth">Über uns</a></li>
+								<li><a href="#" data-scroll-nav="3" class="smooth">Unsere Services</a></li>
+								<li><a href="#" data-scroll-nav="4" class="smooth">Preisliste</a></li>
 								<li><a href="mailto:Mail@Example.com">Contact Us</a></li>
-								<li class="button"><a href="#" class="btn btn-default main-bg-color text-uppercase smooth" data-scroll-nav="1">Get A Quote</a></li>
+								<li class="button"><a href="#" class="btn btn-default main-bg-color text-uppercase smooth" data-scroll-nav="1">kostenlos erste Kalkulation anfordern</a></li>
 							</ul>
 						</div>
 					</div>
