nav liste angepasst v2

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 								<li><a href="#" data-scroll-nav="2" class="smooth">Über uns</a></li>
 								<li><a href="#" data-scroll-nav="3" class="smooth">Unsere Services</a></li>
 								<li><a href="#" data-scroll-nav="4" class="smooth">Preisliste</a></li>
-								<li><a href="mailto:Mail@Example.com">Contact Us</a></li>
+								<li><a href="mailto:Mail@Example.com">Kontaktieren Sie uns</a></li>
 								<li class="button"><a href="#" class="btn btn-default main-bg-color text-uppercase smooth" data-scroll-nav="1">kostenlos erste Kalkulation anfordern</a></li>
 							</ul>
 						</div>
