update index html

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<!-- set the description -->
 	<meta name="description" content="Musikservice *** - Professionelle Musikdienstleistungen für Events, Hochzeiten und mehr.">
-	<meta name="keywords" content="Musikservice, Events, Hochzeiten, Musik, Live-Bands">
-	<meta name="author" content="Swan Lake - Lead Generation Marketing Landing Page">
+	<meta name="keywords" content="Events, Hochzeiten, Musik, Live-Musik">
+	<meta name="author" content="Webseiten-Service André und Andy - ihr Partner für Webseiten">
 	<!-- Page Title -->
 	<title>Musikservice Dürrmenz - Ihr Partner für Live Musik</title>
 	<!-- include the site stylesheet -->
@@ -321,7 +321,7 @@
 				<div class="row">
 					<!-- footer bottom container -->
 					<div class="col-xs-12 col-sm-6 bottom">
-						<p>2025 © Musikservice Dürrmenz. Alle Rechte vorbehalten.</p>
+						<p>2025 © Musikservice ***. Alle Rechte vorbehalten.</p>
 					</div>
 					<!-- footer bottom container -->
 					<div class="col-xs-12 col-sm-6 bottom">
