--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@
 							<!-- price box start here -->
 							<div class="price-box">
 								<header class="header">
-									<strong class="title text-uppercase">Hochzeitspaket</strong>
+									<strong class="title text-uppercase">Trauungspaket</strong>
 									<span class="price-txt">
-										<span class="price main-color">€500</span>
+										<span class="price main-color">1.999€</span>
 										<span class="txt"> / Event</span>
 									</span>
-									<p>Perfekte Musik für Ihren besonderen Tag</p>
+									<p>2h Livemusik mit Song Auswahl aus fixem Reportaire. Perfekte Musik für Ihren besonderen Tag</p>
 								</header>
 							</div>
 							<!-- price box end here -->
@@ -273,12 +273,12 @@
 							<!-- price box start here -->
 							<div class="price-box">
 								<header class="header">
-									<strong class="title text-uppercase">Eventpaket</strong>
+									<strong class="title text-uppercase">Musik Traum-Paket</strong>
 									<span class="price-txt">
-										<span class="price main-color">€800</span>
+										<span class="price main-color">2.999€</span>
 										<span class="txt"> / Event</span>
 									</span>
-									<p>Musik mit speziellen Songwünschen für Firmenfeiern</p>
+									<p>4h Livemusik mit (max. 5) Songwünsche des Brautpaares</p>
 								</header>
 							</div>
 							<!-- price box end here -->
