--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 	<!-- set the apple mobile web app status bar style -->
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<!-- set the description -->
-	<meta name="description" content="Musikservice *** - Professionelle Musikdienstleistungen für Events, Hochzeiten und mehr.">
+	<meta name="description" content="Happy-Tones - Professionelle Musikdienstleistungen für Events, Hochzeiten und mehr.">
 	<meta name="keywords" content="Events, Hochzeiten, Musik, Live-Musik">
 	<meta name="author" content="Webseiten-Service André und Andy - ihr Partner für Webseiten">
 	<!-- Page Title -->
-	<title>Musikservice Dürrmenz - Ihr Partner für Live Musik</title>
+	<title>Happy-Tones - Ihr Partner für Live Musik</title>
 	<!-- include the site stylesheet -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700%7cUbuntu:400,700" rel="stylesheet">
 	<!-- include the site stylesheet -->
@@ -53,7 +53,7 @@
 						<!-- header logo -->
 						<div class="logo pull-left">
 							<a href="home.html">
-								<img src="images/musikservice-logo.png" alt="Musikservice ***" class="img-responsive">
+								<img src="images/musikservice-logo.png" alt="Happy-Tones" class="img-responsive">
 							</a>
 						</div>
 						<a href="#" class="nav-opener pull-right"><i class="fa fa-bars" aria-hidden="true"></i></a>
@@ -120,7 +120,7 @@
 					<!-- main heading start here -->
 					<header class="main-heading row">
 						<div class="col-xs-12 col-sm-10 col-sm-push-1 col-lg-8 col-lg-push-2 text-center">
-							<h2 class="heading text-uppercase"><span class="main-color">Über</span> Musikservice ***</h2>
+							<h2 class="heading text-uppercase"><span class="main-color">Über</span> Happy-Tones</h2>
 							<span class="divider center"></span>
 							<p>Wir bieten professionelle Musikdienstleistungen für Hochzeiten, Firmenfeiern, Geburtstage und andere Events. Unser Team aus erfahrenen Musikern sorgt für die perfekte musikalische Begleitung.</p>
 						</div>
@@ -171,20 +171,16 @@
 				<div class="container pad-top-xs">
 					<div class="row">
 						<div class="co-xs-12 col-sm-3 pad-bottom-xs">
-							<span class="counter main-color">246</span>
-							<span class="txt text-uppercase">clients</span>
+							<span class="counter main-color">23</span>
+							<span class="txt text-uppercase">kunden</span>
 						</div>
 						<div class="co-xs-12 col-sm-3 pad-bottom-xs">
-							<span class="counter main-color">390</span>
-							<span class="txt text-uppercase">coffee</span>
+							<span class="counter main-color">20</span>
+							<span class="txt text-uppercase">lieder</span>
 						</div>
 						<div class="co-xs-12 col-sm-3 pad-bottom-xs">
-							<span class="counter main-color">56</span>
-							<span class="txt text-uppercase">Awards</span>
-						</div>
-						<div class="co-xs-12 col-sm-3 pad-bottom-xs">
-							<span class="counter main-color">470</span>
-							<span class="txt text-uppercase">Brand</span>
+							<span class="counter main-color">4</span>
+							<span class="txt text-uppercase">Musiker</span>
 						</div>
 					</div>
 				</div>
@@ -233,7 +229,7 @@
 										<span class="icomoon icon-layers main-color"></span>
 										<span class="title text-uppercase main-color">Wünsche?</span>
 										<span class="divider white center"></span>
-										<p>Kein Problem! Je nach Event spielen wir gerne 1 - 2 Ihrer Wunschsongs außerhalb unseres Repertoires</p>
+										<p>Kein Problem! Je nach Event spielen wir gerne bis zu 5 Ihrer Wunschsongs außerhalb unseres Repertoires</p>
 									</div>
 								</li>
 							<!-- services box end here -->
@@ -273,12 +269,12 @@
 							<!-- price box start here -->
 							<div class="price-box">
 								<header class="header">
-									<strong class="title text-uppercase">Musik Traum-Paket</strong>
+									<strong class="title text-uppercase">Musik Traumpaket</strong>
 									<span class="price-txt">
 										<span class="price main-color">2.999€</span>
 										<span class="txt"> / Event</span>
 									</span>
-									<p>4h Livemusik mit (max. 5) Songwünsche des Brautpaares</p>
+									<p>4h Livemusik mit (max. 5) Songwünsche von dem Brautpaar</p>
 								</header>
 							</div>
 							<!-- price box end here -->
@@ -296,7 +292,7 @@
 						<!-- footer logo -->
 						<div class="logo pull-left">
 							<a href="home.html">
-								<img src="images/musikservice-logo.png" alt="Musikservice Dürrmenz" class="img-responsive">
+								<img src="images/musikservice-logo.png" alt="Happy-Tones" class="img-responsive">
 							</a>
 						</div>
 					</div>
@@ -321,7 +317,7 @@
 				<div class="row">
 					<!-- footer bottom container -->
 					<div class="col-xs-12 col-sm-6 bottom">
-						<p>2025 © Musikservice ***. Alle Rechte vorbehalten.</p>
+						<p>2025 © Happy-Tones. Alle Rechte vorbehalten.</p>
 					</div>
 					<!-- footer bottom container -->
 					<div class="col-xs-12 col-sm-6 bottom">
