anpassung services section

--- a/index.html
+++ b/index.html
@@ -199,9 +199,10 @@
 									<p>ganz nach Ihren Wünschen!</p>
 								</header>
 								<ul class="list list-unstyled">
-									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Live-Band für Events</li>
+									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Live-Band für Hochzeiten & Events</li>
 									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>nach wunsch mit Gesang</li>
 									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>Individuelle Musikberatung</li>
+									<li><i class="fa fa-caret-right main-color" aria-hidden="true"></i>je nach Paket bis zu 5 Wunschsongs</li>
 								</ul>
 							</div>
 						</div>
@@ -211,17 +212,17 @@
 								<li>
 									<div class="over">
 										<span class="icomoon icon-document main-color"></span>
-										<span class="title text-uppercase main-color">Jung & Flexibel</span>
+										<span class="title text-uppercase main-color">Ohne viel Papierkram</span>
 										<span class="divider white center"></span>
-										<p>Wir sind da wenn Sie uns brauchen!</p>
+										<p>Sie buchen, wir kommen!</p>
 									</div>
 								</li>
 								<li>
 									<div class="over">
 										<span class="icomoon icon-mobile main-color"></span>
-										<span class="title text-uppercase main-color">Freundlich</span>
+										<span class="title text-uppercase main-color">Erreichbar</span>
 										<span class="divider white center"></span>
-										<p>Wir stehen Ihnen gerne für Rückfragen zuverfügung</p>
+										<p>Wir stehen Ihnen gerne für Rückfragen zuverfügung!</p>
 									</div>
 								</li>
 								<li>
@@ -231,6 +232,14 @@
 										<span class="divider white center"></span>
 										<p>Kein Problem! Je nach Event spielen wir gerne bis zu 5 Ihrer Wunschsongs außerhalb unseres Repertoires</p>
 									</div>
+								</li>
+								<li>
+									<div class="over">
+										<span class="icomoon icon-mic main-color"></span>
+										<span class="title text-uppercase main-color">Gesang</span>
+										<span class="divider white center"></span>
+										<p>Wir bieten auch Gesang an, je nach Event und Wunsch</p>
+									</div>	
 								</li>
 							<!-- services box end here -->
 						</div>
